chore(backend): replaced deprecated constructor
URL(String) is deprecated, because unsafe
URI(String).toUrl() is the recommended replacement